--- a/README.textile
+++ b/README.textile
@@ -27,6 +27,7 @@ The example application is more than a learning exercise. The application can be
 * Home page
 * "About" page
 * Contact page with "contact request" form
+* Google spreadsheet datastore
 * Navigation bar
 * Mailing list sign-up form
 
@@ -42,7 +43,9 @@ For example, using the high_voltage gem, you could add pages for:
 
 h4. Contact Form
 
-The Contact page includes a "contact request" form. When the visitor submits the form, an email message goes to the site owner containing the contents of the form. The tutorial shows how to set up the application so email can be sent using the site owner's Gmail account. The contact form can be adapted for other purposes, such as an appointment request.
+The Contact page includes a "contact request" form. The contact form can be adapted for other purposes, such as an appointment request.
+
+When the visitor submits the form, data is saved to a spreadsheet on Google Drive that the site owner can access for review and analysis. An email message goes to the site owner containing the contents of the form.
 
 h4. Mailing List Opt-In
 
@@ -58,7 +61,7 @@ This is one in a series of Rails example apps and tutorials from the "RailsApps 
 
 h2. Accounts You Will Need
 
-To send email from the application, you will need a "Gmail":https://accounts.google.com/SignUp?service=mail account. You can get a free "Gmail":https://accounts.google.com/SignUp?service=mail account if you don't already have one. Other services, such as "Mandrill":http://mandrill.com/, can be used to send email from the application. Or you can connect directly to an SMTP mail server to send email. See the article "Send Email with Rails":http://railsapps.github.io/rails-send-email.html for more information.
+To send email from the application, and save data to a spreadsheet on Google Drive, you will need a "Gmail":https://accounts.google.com/SignUp?service=mail account. You can get a free "Gmail":https://accounts.google.com/SignUp?service=mail account if you don't already have one. Other services, such as "Mandrill":http://mandrill.com/, can be used to send email from the application. Or you can connect directly to an SMTP mail server to send email. See the article "Send Email with Rails":http://railsapps.github.io/rails-send-email.html for more information.
 
 The application includes a form that allows website visitors to "opt-in" to a mailing list. You'll need a "MailChimp":http://mailchimp.com/ account, which is free. MailChimp allows you to send up to 12,000 emails/month to a list of 2000 or fewer subscribers for free. There is no cost to set up an account. After you have set up a MailChimp account, create a new mailing list where you can collect email addresses of visitors who have asked to subscribe to a newsletter. The MailChimp "Lists" page has a button for "Create List." The list name and other details are up to you.
 
@@ -204,11 +207,12 @@ h3. Gems
 Here are the gems used by the application:
 
 * "activerecord-tableless":https://github.com/softace/activerecord-tableless - helps to use Rails without a database
-* "figaro":https://github.com/laserlemon/figaro - configuration framework
 * "bootstrap-sass":https://github.com/thomas-mcdonald/bootstrap-sass - Twitter Bootstrap for CSS and JavaScript
-* "simple_form":http://simple-form.plataformatec.com.br/ - forms made easy
-* "high_voltage":https://github.com/thoughtbot/high_voltage - for static pages like "about"
+* "figaro":https://github.com/laserlemon/figaro - configuration framework
 * "gibbon":https://github.com/amro/gibbon - access to the MailChimp API
+* "google_drive":https://github.com/gimite/google-drive-ruby - use Google Drive spreadsheets for data storage
+* "high_voltage":https://github.com/thoughtbot/high_voltage - for static pages like "about"
+* "simple_form":http://simple-form.plataformatec.com.br/ - forms made easy
 
 These gems make development easier:
 
@@ -284,7 +288,7 @@ Enter your email address and click the "sign up" button. You should see the page
 
 You should be able to click the navigation links for "About" or "Contact" and see those pages.
 
-Submitting the form on the "Contact" page should send an email mesage to the site owner's address.
+Submitting the form on the "Contact" page should send an email mesage to the site owner's address and save the data to a spreadsheet on Google Drive. Visit your Google Drive account ("Drive" is in the navigation bar when you visit the Googe Search or Gmail home pages). You'll see a list of Google Drive files. The newest one will be a *Learn-Rails-Example* spreadsheet. Open the file and you will see the data from the contact form. Whenever a visitor submits the contact form, the spreadsheet will update within seconds.
 
 Stop the server with Control-C. If you test the app by starting the web server and then leave the server running while you install new gems, you’ll have to restart the server to see any changes. The same is true for changes to configuration files in the config folder. This can be confusing to new Rails developers because you can change files in the app folders without restarting the server. Stop the server each time after testing and you will avoid this issue.
 
