--- a/CHANGELOG.textile
+++ b/CHANGELOG.textile
@@ -1,11 +1,14 @@
 h1. CHANGELOG
 
-h3. Book version 1.18 (release pending)
+h3. 1.18.0 January 10, 2014 (book version 1.18)
 
-* changed commands in version 1.0.1 of the "rails_layout gem":https://github.com/RailsApps/rails_layout
-* change @rails generate layout foundation4 --force@ to  @rails generate layout:install foundation4 --force@
+* Update from Ruby 2.0.0 to Ruby 2.0.1
 
-h3. 1.17.2  December 8, 2013 (book version 1.17)
+Changes in the book:
+
+* Changed one line in the "Front-End Framework" chapter to accommodate a change in the rails_layout gem version 1.0.1. The command @rails generate layout foundation4 --force@ becomes @rails generate layout:install foundation4 --force@.
+
+h3. 1.17.2 December 8, 2013 (book version 1.17)
 
 * update to Rails 4.0.2
 * use Foundation 4 pending resolution of issue #10
