--- a/CHANGELOG.textile
+++ b/CHANGELOG.textile
@@ -1,5 +1,9 @@
 h1. CHANGELOG
 
+h3. 1.19.0 February 1, 2014 (book version 1.19)
+
+* use Foundation 5.0.3
+
 h3. 1.18.0 January 10, 2014 (book version 1.18)
 
 * Update from Ruby 2.0.0 to Ruby 2.0.1
