update to Rails 4.0.3 (fixes issue #26

--- a/CHANGELOG.textile
+++ b/CHANGELOG.textile
@@ -1,5 +1,8 @@
 h1. CHANGELOG
 
+h3. 1.20.0 February 19, 2014 (book version unreleased)
+
+* update to Rails 4.0.3
 
 h3. 1.19.0 February 1, 2014 (book version 1.19)
 
