--- a/CHANGELOG.textile
+++ b/CHANGELOG.textile
@@ -2,6 +2,7 @@ h1. CHANGELOG
 
 h3. 1.20.0 February 19, 2014 (book version unreleased)
 
+* specify 'foundation-rails 5.0.3.1' (don't use foundation-rails 5.1.1.0) pending resolution of issue #27
 * update to Rails 4.0.3
 
 h3. 1.19.0 February 1, 2014 (book version 1.19)
