--- a/README.textile
+++ b/README.textile
@@ -1,6 +1,6 @@
 h1. !http://railsapps.github.io/images/rails-36x36.jpg(Learn Rails)! Learn Rails
 
-A Rails 4.0 example application to accompany the book "Learn Ruby on Rails":http://learn-rails.com/learn-ruby-on-rails.html.
+A Rails 4.1 example application to accompany the book "Learn Ruby on Rails":http://learn-rails.com/learn-ruby-on-rails.html.
 
 The book introduces basic concepts of Rails development by showing the reader how to build an application that can be used for a typical small business website. The application includes a home page, "about" page, contact form, and option to sign up for a mailing list.
 
@@ -14,7 +14,7 @@ This example application is fully documented in the book "Learn Ruby on Rails":h
 
 With the book, a complete beginner can create this application without any additional knowledge. The book explains all the code, introducing basic concepts of Rails application development and professional practices.
 
-h4. Current Version: 1.19
+h4. Current Version: 2.0.0
 
 This example application (here on GitHub) matches the code in the book. For recent changes, see:
 
@@ -80,8 +80,8 @@ h2. Dependencies
 
 Before generating your application, you will need:
 
-* The Ruby language - version 2.1.0
-* The Rails gem - version 4.0
+* The Ruby language - version 2.1
+* The Rails gem - version 4.1
 
 See the article "Installing Rails":http://railsapps.github.io/installing-rails.html for instructions about setting up Rails and your development environment.
 
@@ -107,7 +107,7 @@ h3. Generate
 
 If you want to use the project as a starter application, use the "Rails Composer":http://railsapps.github.io/rails-composer/ tool to generate a new version of the example app. You'll be able to give it your own project name when you generate the app. Generating the application gives you additional options.
 
-To build the example application, Rails 4.0 must be installed in your development environment. Run the command:
+To build the example application, Rails 4.1 must be installed in your development environment. Run the command:
 
 <pre>
 $ rails new learn-rails -m https://raw.github.com/RailsApps/rails-composer/master/composer.rb
@@ -122,20 +122,22 @@ This creates a new Rails app named @learn-rails@ on your computer. You can use a
 You'll see a prompt:
 
 <pre>
-question  Install an example application for Rails 4.0?
-      1)  Build a RailsApps starter application
+question  Build a starter application?
+      1)  Build a RailsApps example application
       2)  Build a contributed application
       3)  I want to build my own application
 </pre>
 
-Enter "1" to select *Build a RailsApps starter application*. You'll see a prompt:
+Enter "1" to select *Build a RailsApps example application*. You'll see a prompt:
 
 <pre>
-question  Starter apps for Rails 4.0. More to come.
+question  Starter apps for Rails 4.1. More to come.
       1)  learn-rails
       2)  rails-bootstrap
       3)  rails-foundation
-      4)  rails-devise
+      4)  rails-omniauth
+      5)  rails-devise
+      6)  rails-devise-pundit
 </pre>
 
 Choose *learn-rails*. The Rails Composer tool may give you other options (other applications may have been added since these notes were written).
@@ -148,11 +150,15 @@ The application generator template will ask you for additional preferences:
        2)  Thin
        3)  Unicorn
        4)  Puma
+       5)  Phusion Passenger (Apache/Nginx)
+       6)  Phusion Passenger (Standalone)
  question  Web server for production?
        1)  Same as development
        2)  Thin
        3)  Unicorn
        4)  Puma
+       5)  Phusion Passenger (Apache/Nginx)
+       6)  Phusion Passenger (Standalone)
  question  Template engine?
        1)  ERB
        2)  Haml
@@ -160,13 +166,6 @@ The application generator template will ask you for additional preferences:
  question  Continuous testing?
        1)  None
        2)  Guard
- question  Front-end framework?
-       1)  None
-       2)  Zurb Foundation 5.0
-       3)  Zurb Foundation 4.0
-       4)  Twitter Bootstrap 3.0
-       5)  Twitter Bootstrap 2.3
-       6)  Simple CSS
    extras  Set a robots.txt file to ban spiders? (y/n)
    extras  Create a GitHub repository? (y/n)
    extras  Use or create a project-specific rvm gemset? (y/n)
@@ -185,10 +184,6 @@ The example application uses the default "ERB" Rails template engine. Optionally
 h4. Continuous Testing
 
 You won't need "continuous testing" if you are a beginner. Select "none."
-
-h4. Front-end Framework
-
-To duplicate the example code from the book, choose "Zurb Foundation 5.0".
 
 h4. Other Choices
 
@@ -231,7 +226,6 @@ h3. Gems
 Here are the gems used by the application:
 
 * "activerecord-tableless":https://github.com/softace/activerecord-tableless - helps to use Rails without a database
-* "figaro":https://github.com/laserlemon/figaro - configuration framework
 * "foundation-rails":https://github.com/zurb/foundation - front-end framework
 * "gibbon":https://github.com/amro/gibbon - access to the MailChimp API
 * "google_drive":https://github.com/gimite/google-drive-ruby - use Google Drive spreadsheets for data storage
@@ -264,36 +258,51 @@ Keep in mind that you have installed these gems locally. When you deploy the app
 
 h3. Configuration File
 
-The application uses the "figaro gem":https://github.com/laserlemon/figaro to set environment variables in the *config/application.yml* file. The *.gitignore* file prevents the *config/application.yml* file from being saved in the git repository so your credentials are kept private. See the article "Rails Environment Variables":http://railsapps.github.io/rails-environment-variables.html for more information.
+To consolidate configuration settings in a single location, we store credentials in the *config/secrets.yml* file. To keep your credentials private, use Unix environment variables to set your credentials. See the article "Rails Environment Variables":http://railsapps.github.io/rails-environment-variables.html for more information.
 
-Modify the file *config/application.yml*:
+Add your credentials to the file *config/secrets.yml*:
 
 <pre>
-# Add account credentials and API keys here.
-# See http://railsapps.github.io/rails-environment-variables.html
-# This file should be listed in .gitignore to keep your settings secret!
-# Each entry sets a local environment variable and overrides ENV variables in the Unix shell.
-GMAIL_USERNAME: Your_Username
-GMAIL_PASSWORD: Your_Password
-MAILCHIMP_API_KEY: Your_MailChimp_API_Key
-MAILCHIMP_LIST_ID: Your_List_ID
-DOMAIN_NAME: example.com
-OWNER_EMAIL: me@example.com
+# Make sure the secrets in this file are kept private
+# if you're sharing your code publicly.
+
+development:
+  gmail_username: <%= ENV["GMAIL_USERNAME"] %>
+  gmail_password: <%= ENV["GMAIL_PASSWORD"] %>
+  mailchimp_api_key: <%= ENV["MAILCHIMP_API_KEY"] %>
+  mailchimp_list_id: <%= ENV["MAILCHIMP_LIST_ID"] %>
+  domain_name: <%= ENV["DOMAIN_NAME"] %>
+  owner_email: <%= ENV["OWNER_EMAIL"] %>
+  secret_key_base: very_long_random_string
+
+test:
+  secret_key_base: very_long_random_string
+
+# Do not keep production secrets in the repository,
+# instead read values from the environment.
+production:
+  gmail_username: <%= ENV["GMAIL_USERNAME"] %>
+  gmail_password: <%= ENV["GMAIL_PASSWORD"] %>
+  mailchimp_api_key: <%= ENV["MAILCHIMP_API_KEY"] %>
+  mailchimp_list_id: <%= ENV["MAILCHIMP_LIST_ID"] %>
+  domain_name: <%= ENV["DOMAIN_NAME"] %>
+  owner_email: <%= ENV["OWNER_EMAIL"] %>
+  secret_key_base: <%= ENV["SECRET_KEY_BASE"] %>
 </pre>
 
-For the Gmail username and password, enter the credentials you use to log in to Gmail when you check your inbox.
+All configuration values in the *config/secrets.yml* file are available anywhere in the application as variables. For example, @Rails.application.secrets.gmail_username@ will return the string set in the Unix environment variable @GMAIL_USERNAME@.
+
+For the Gmail username and password, enter the credentials you use to log in to Gmail when you check your inbox. See the article "Send Email with Rails":http://railsapps.github.io/rails-send-email.html if you are using Google two factor authentication.
 
 To add an environment variable for the MailChimp API key, "Log in to MailChimp":https://admin.mailchimp.com/ to get your API key. Click your name at the top of the navigation menu, then click "Account Settings." Click "Extras," then "API keys."
 
 To find the MailChimp list ID, you must have already created a MailChimp mailing list. On the MailChimp "Lists" page, click the "down arrow" for a menu and click "Settings." At the bottom of the "List Settings" page, you'll find the unique ID for the mailing list.
 
-If you already have a custom domain name you'll use when you deploy the application, you can replace @example.com@. If you deploy the application to Heroku, you'll replace @example.com@ with the unique name you've given your application on Heroku. You'll have to wait until you deploy to know the name you'll use on Heroku.
+If you already have a custom domain name you'll use when you deploy the application, you can set @domain_name@. If you deploy the application to Heroku, you'll set @domain_name@ with the unique name you've given your application on Heroku. You'll have to wait until you deploy to know the name you'll use on Heroku.
 
-You'll send email messages to the <code>OWNER_EMAIL</code> address when a visitor submits a contact request form. Replace <code>me@example.com</code> with an email address where you receive mail.
+You'll send email messages to the <code>owner_email</code> address when a visitor submits a contact request form. Set it with an email address where you receive mail.
 
-All configuration values in the *config/application.yml* file are available anywhere in the application as environment variables. For example, @ENV["GMAIL_USERNAME"]@ will return the string "Your_Username".
-
-If you prefer, you can delete the *config/application.yml* file and set each value as an environment variable in the Unix shell.
+If you don't want to use Unix environment variables, you can set each value directly in the *config/secrets.yml* file. The file must be in your git repository when you deploy to Heroku. However, you shouldn't save the file to a public GitHub repository where other people can see your credentials.
 
 h2. Test the App
 
@@ -330,15 +339,7 @@ $ git commit -m "assets compiled for Heroku"
 $ git push origin master
 </pre>
 
-You'll need to set the configuration values from the *config/application.yml* file as Heroku environment variables. See the article "Rails Environment Variables":http://railsapps.github.io/rails-environment-variables.html for more information.
-
-With the figaro gem, just run:
-
-<pre>
-rake figaro:heroku
-</pre>
-
-Alternatively, you can set Heroku environment variables directly with @heroku config:add@.
+If you've set configuration values in the *config/secrets.yml* file, you'll need to set them as Heroku environment variables. You can set Heroku environment variables directly with @heroku config:add@. For example:
 
 <pre>
 $ heroku config:add GMAIL_USERNAME='myname@gmail.com' GMAIL_PASSWORD='secret'
@@ -354,9 +355,11 @@ $ git push heroku master
 
 See the "Tutorial for Rails on Heroku":http://railsapps.github.io/rails-heroku-tutorial.html for details.
 
-h2. Troubleshooting
+h2. Where to Get Help
 
-Problems? Check the "issues":https://github.com/RailsApps/learn-rails/issues.
+Are you stuck with code that won't work? "Stack Overflow":http://stackoverflow.com/questions/tagged/learn-ruby-on-rails provides a question-and-answer forum for readers of the book. Use the tag "learn-ruby-on-rails".
+
+Found a bug in the tutorial application? Please create an "issue":http://github.com/RailsApps/learn-rails/issues on GitHub.
 
 h2. Documentation
 
@@ -365,12 +368,6 @@ The book "Learn Ruby on Rails":http://learn-rails.com/learn-ruby-on-rails.html p
 h2. Issues
 
 Please create a "GitHub issue":https://github.com/RailsApps/learn-rails/issues if you identify any problems or have suggestions for improvements.
-
-h2. Where to Get Help
-
-Are you stuck with code that won't work? "Stack Overflow":http://stackoverflow.com/questions/tagged/learn-ruby-on-rails provides a question-and-answer forum for readers of the book. Use the tag "learn-ruby-on-rails".
-
-Found a bug in the tutorial application? Please create an "issue":http://github.com/RailsApps/learn-rails/issues on GitHub.
 
 h2. Contributing
 
