--- a/README.textile
+++ b/README.textile
@@ -148,7 +148,7 @@ The application generator template will ask you for an additional preference:
    extras  Use or create a project-specific rvm gemset? (y/n)
 </pre>
 
-It is a good idea to use "RVM":https://rvm.io/, the Ruby Version Manager, and create a project-specific rvm gemset (not available on Windows). See "Installing Rails":http://railsapps.github.io/installing-rails.html.
+It is a good idea to use "rvm":https://rvm.io/, the Ruby Version Manager, and create a project-specific rvm gemset (not available on Windows). See "Installing Rails":http://railsapps.github.io/installing-rails.html.
 
 h4. Troubleshooting
 
