--- a/README.textile
+++ b/README.textile
@@ -97,7 +97,7 @@ h3. Cloud
 
 Click the button below to install the app on "Nitrous.io":https://www.nitrous.io/, a hosted development environment. Nitrous.io is free for small projects. See "Ruby on Rails with Nitrous.io":http://railsapps.github.io/rubyonrails-nitrous-io.html for more information.
 
-"!https://d3o0mnbgv6k92a.cloudfront.net/assets/hack-l-v1-3cc067e71372f6045e1949af9d96095b.png(Hack RailsApps/learn-rails on Nitrous.IO)!":https://www.nitrous.io/hack_button?source=embed&runtime=rails&repo=RailsApps%2Flearn-rails&file_to_open=https%3A%2F%2Fgithub.com%2FRailsApps%2Flearn-rails%2Fnitrous.txt
+"!https://d3o0mnbgv6k92a.cloudfront.net/assets/hack-l-v1-3cc067e71372f6045e1949af9d96095b.png(Hack RailsApps/learn-rails on Nitrous.IO)!":https://www.nitrous.io/hack_button?source=embed&runtime=rails&repo=RailsApps%2Flearn-rails&file_to_open=nitrous.txt
 
 h3. Local
 
