--- a/README.textile
+++ b/README.textile
@@ -16,14 +16,18 @@ This example application is fully documented in the book "Learn Ruby on Rails":h
 
 With the book, a complete beginner can create this application without any additional knowledge. The book explains all the code, introducing basic concepts of Rails application development and professional practices.
 
-h4. Book Current Version: 2.0.2
+h4. Current Version: 2.0.4
 
-This example application (here on GitHub) matches the code in the book. For recent changes, see:
+This example application (here on GitHub) is newer than the code in the book. For recent changes, see:
 
 * "CHANGELOG":https://github.com/RailsApps/learn-rails/blob/master/CHANGELOG.textile for a summary
 * "commit log":https://github.com/RailsApps/learn-rails/commits/master for code changes
 
-The book contains a "Version Notes" chapter that offers more detail.
+In particular:
+
+* updated Ruby from version 2.1.1 to 2.1.3
+* updated Rails from version 4.1.1 to Rails 4.1.6
+* specify 'foundation-rails 5.4.3.1' in the Gemfile (don't use foundation-rails 5.4.4.0) pending resolution of "issue #38":https://github.com/RailsApps/learn-rails/issues/38
 
 h2. A Practical Application
 
@@ -166,14 +170,6 @@ If you get an error "OpenSSL certificate verify failed" or "Gem::RemoteFetcher::
 
 h3. Cloud
 
-h4. Heroku
-
-Click the button to deploy to Heroku:
-
-"!https://www.herokucdn.com/deploy/button.png(Deploy to Heroku)!":https://heroku.com/deploy
-
-h4. Nitrous.io
-
 Click the button below to install the app on "Nitrous.io":https://www.nitrous.io/, a hosted development environment. Nitrous.io is free for small projects. See "Ruby on Rails with Nitrous.io":http://railsapps.github.io/rubyonrails-nitrous-io.html for more information.
 
 "!https://d3o0mnbgv6k92a.cloudfront.net/assets/hack-l-v1-3cc067e71372f6045e1949af9d96095b.png(Hack RailsApps/learn-rails on Nitrous.IO)!":https://www.nitrous.io/hack_button?source=embed&runtime=rails&repo=RailsApps%2Flearn-rails&file_to_open=nitrous.txt
@@ -297,7 +293,17 @@ Stop the server with Control-C. If you test the app by starting the web server a
 
 h2. Deploy to Heroku
 
-For your convenience, here is a "Tutorial for Rails on Heroku":http://railsapps.github.io/rails-heroku-tutorial.html. Heroku provides low cost, easily configured Rails application hosting.
+Heroku provides low cost, easily configured Rails application hosting.
+
+h4. One Click Deployment
+
+For one-click deployment, click the button to deploy to Heroku:
+
+"!https://www.herokucdn.com/deploy/button.png(Deploy to Heroku)!":https://heroku.com/deploy
+
+h4. From the Command Line
+
+Alternatively, you can deploy from the command line.
 
 You'll need to precompile assets before you commit to git and push to Heroku:
 
