--- a/README.textile
+++ b/README.textile
@@ -16,18 +16,18 @@ This example application is fully documented in the book "Learn Ruby on Rails":h
 
 With the book, a complete beginner can create this application without any additional knowledge. The book explains all the code, introducing basic concepts of Rails application development and professional practices.
 
-h4. Latest Book Version: 2.0.2
+h4. Latest Book Version: 2.1.0
 
-The most recent version of the book was written for Rails 4.1.
+The most recent version of the book was written for Rails 4.1 and released October 12, 2014.
 
-h4. Application Version: 2.0.5
+h4. Application Version: 2.1.0
 
-This example application (here on GitHub) is newer than the code in the book. In particular:
+This example application (here on GitHub) is the same as the code in the book. In particular:
 
-* updated Ruby from version 2.1.1 to 2.1.3
-* updated Rails from version 4.1.1 to Rails 4.1.6
+* Ruby 2.1.3
+* Rails 4.1.6
 
-For other recent changes, see:
+For recent changes, see:
 
 * "CHANGELOG":https://github.com/RailsApps/learn-rails/blob/master/CHANGELOG.textile for a summary
 * "commit log":https://github.com/RailsApps/learn-rails/commits/master for code changes
