--- a/CHANGELOG.textile
+++ b/CHANGELOG.textile
@@ -1,6 +1,6 @@
 h1. CHANGELOG
 
-h3. 2.0.5 September 28, 2014 (book version unreleased)
+h3. 2.1.0 October 12, 2014 (book version 2.10)
 
 * no need to specify 'foundation-rails' gem version (closes issue #38)
 
